# goose

./: .gitignore  .goose-jedi-config.json  .goosehints  .otel.env  .ruff.toml  404.html  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  available-toolkits.html  cli.html  config.json  config.py  configuration.html  contributing.html  creating-a-new-toolkit.html  goose_session.py  healthbar.py  index.html  installation.html  justfile  mkdocs.yml  objects.inv  plugins.html  providers.html  pyproject.toml  sitemap.xml  tips.html  toolkits.html  using-toolkits.html
.github/workflows/: ci.yaml  deploy_docs.yaml  publish.yaml  pull_request_title.yaml  pypi_release.yaml  release-monitor.yml  test_release.yaml
docs/: configuration.md  index.md  mkdocs.yml  providers.md
docs/assets/: docs.js
docs/css/: code_select.css
docs/docs/: cli.md  configuration.md  contributing.md  creating-a-new-toolkit.md  index.md  installation.md  learn.md  plugins.md  releasing.md  sharing.md  tips.md  toolkits.md
docs/docs/assets/: docs.css
docs/guidance/: applications.md  getting-started.md  goose-in-action.md  tips.md
docs/plugins/: available-toolkits.md  cli.md  creating-a-new-toolkit.md  providers.md  using-toolkits.md
docs/reference/: SUMMARY.md  index.md
docs/reference/goose/: build.md  index.md  notifier.md  profile.md  view.md
docs/scripts/: gen_ref_pages.py
guidance/: applications.html  getting-started.html  goose-in-action.html  tips.html
plugins/: available-toolkits.html  cli.html  creating-a-new-toolkit.html  plugins.html  providers.html  using-toolkits.html
reference/: SUMMARY.html  index.html
reference/goose/: build.html  index.html  notifier.html  profile.html  view.html
reference/goose/cli/: config.html  index.html  main.html  session.html
reference/goose/command/: base.html  file.html  index.html
reference/goose/toolkit/: base.html  developer.html  github.html  index.html  lint.html  screen.html  utils.html
reference/goose/utils/: ask.html  check_shell_command.html  diff.html  file_utils.html  index.html  session_file.html
scripts/: check_tag_exists.sh  setup_langfuse.sh
search/: search_index.json
src/goose/: __init__.py  _logger.py  build.py  notifier.py  profile.py  view.py
src/goose/_internal/: profile_config.py  utils.py
src/goose/cli/: config.py  main.py  session.py  session_notifier.py
src/goose/command/: __init__.py  base.py  file.py
src/goose/config/: __init__.py
src/goose/language_server/: base.py  client.py  config.py  language_client.py  language_server_types.py  logger.py  type_helpers.py  utils.py
src/goose/pluginbase/: command.py  profile.py  toolkit.py
src/goose/synopsis/: developer.md  moderator.py  (+5 more)
tests/: conftest.py  test_autocomplete.py  test_cli_main.py  test_completer.py  test_jira.py  test_linting.py  test_profile.py
tests/_internal/: test_profile_config.py  test_utils.py
tests/cli/: test_config.py  test_main.py  test_session.py  test_session_otel.py
tests/curves/: p256_tests.rs
tests/synopsis/: test_moderator.py  test_process_management.py  test_system.py  test_toolkit.py
tests/toolkit/: test_developer.py  test_io.py  test_language_server.py  test_psuedotool.py  test_utils.py  test_vector.py
tests/utils/: test_ask.py  test_check_shell_command.py  test_cost_calculator.py  test_create_exchange.py  test_file_utils.py  test_session_file.py  test_utils.py
(+191 files in other folders)
